[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utilities"
version = "1.0"
authors = [
  { name="Thore Wietzke", email="thore.wietzke@fau.de" },
]
description = "utilities for the occupancy benchmark dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = ["numpy==1.26.2", "scipy==1.11.4"]

[tool.setuptools]
packages = ["utilities"]